# code-tab-serializer

./: Cargo.toml  README.md  pyproject.toml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: conversation.rs  csv_adapter.rs  diff.rs  lib.rs  pipeline.rs  sweep_format.rs  sweep_runtime.rs  yaml_adapter.rs  yaml_to_md.rs  yaml_to_sed.rs  yaml_to_testcases.rs  yaml_to_zeta.rs  yaml_types.rs  zeta_format.rs
crates/napi/src/: lib.rs
crates/pyo3/: Cargo.toml
crates/pyo3/src/: lib.rs
