[package]
name = "crowd-pilot-serialize"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI tool for serializing crowd-pilot's IDE interaction data"

[[bin]]
name = "crowd-pilot-serialize"
path = "src/main.rs"

[dependencies]
crowd-pilot-serializer-core = { path = "../core" }
clap = { version = "4.5", features = ["derive"] }
tokenizers = { version = "0.21", features = ["http"] }
serde = { workspace = true }
serde_json = { workspace = true }
vt100 = "0.15"
ratatui = "0.26"
crossterm = "0.27"
flate2 = "1.0"
