[package]
name = "crowd-pilot-serializer-pyo3"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Python bindings for crowd-pilot serializer"

[lib]
name = "crowd_pilot_serializer"
crate-type = ["cdylib"]

[dependencies]
crowd-pilot-serializer-core = { workspace = true }
pyo3 = { workspace = true, features = ["extension-module"] }
serde = { workspace = true }
serde_json = { workspace = true }
